--- a/docs/templates/topindex.html
+++ b/docs/templates/topindex.html
@@ -1,54 +1,24 @@
 {% extends "layout.html" %}
 {% block body %}
 
-  <h1>Hub Documentation</h1>
+  <h1>Build Hat Documentation</h1>
 
   <p>
     {{ _('Welcome! This is the documentation for the Raspberry Pi Build HAT') }}
     {{ release|e }}{% if last_updated %}, {{ _('last updated') }} {{ last_updated|e }}{% endif %}.
   </p>
 
-  <p>
-    The Build HAT runs a port of MicroPython. The hat has its own
-    set of unique bindings to MicroPython. You are currently viewing the documentation for
-    <strong>{{ port_name }}</strong>.
-  </p>
-
-
-  <p><strong>Documentation for MicroPython and {{ port_name }}:</strong></p>
-
   <table class="contentstable"><tr>
     <td width="40%" style="padding-left:2em;">
       <p class="biglink">
-        <a class="biglink" href="{{ pathto("shortcake/index") }}">HAT Library Reference</a><br/>
-          <span class="linkdescr">Hub Library</a></span>
+        <a class="biglink" href="{{ pathto("shortcake/index") }}">Library Reference</a><br/>
+          <span class="linkdescr">Library</a></span>
       </p>
     </td>
     <td width="40%" style="padding-left:2em;">
       <p class="biglink">
         <a class="biglink" href="{{ pathto("license") }}">License</a><br/>
-        <span class="linkdescr">MicroPython license information</span>
-      </p>
-    </td>
-  </tr></table>
-
-  <p><strong>External links:</strong></p>
-
-  <table class="contentstable"><tr>
-    <td width="40%" style="padding-left:2em;">
-      <p class="biglink">
-      <a class="biglink" href="http://micropython.org">MicroPython homepage</a><br/>
-        <span class="linkdescr">the official MicroPython site</span>
-      </p>
-      <p class="biglink">
-        <a class="biglink" href="http://forum.micropython.org">MicroPython forum</a><br/>
-        <span class="linkdescr">community discussion for all things related to MicroPython</span>
-      </p>
-    </td>
-    <td width="40%" style="padding-left:2em;">
-      <p class="biglink">
-        <a class="biglink" href="https://github.com/micropython">MicroPython on GitHub</a><br/>
-        <span class="linkdescr">contribute to the source code on GitHub</span>
+        <span class="linkdescr">License information</span>
       </p>
     </td>
   </tr></table>
