ensure name is consistent in docs

--- a/docs/templates/topindex.html
+++ b/docs/templates/topindex.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-  <h1>Build Hat Documentation</h1>
+  <h1>Build HAT Documentation</h1>
 
   <p>
     {{ _('Welcome! This is the documentation for the Raspberry Pi Build HAT') }}
@@ -11,7 +11,7 @@
   <table class="contentstable"><tr>
     <td width="40%" style="padding-left:2em;">
       <p class="biglink">
-        <a class="biglink" href="{{ pathto("shortcake/index") }}">Library Reference</a><br/>
+        <a class="biglink" href="{{ pathto("buildhat/index") }}">Library Reference</a><br/>
           <span class="linkdescr">Library</a></span>
       </p>
     </td>
