Add changelog, fix formatting and bump version

--- a/docs/templates/versions.html
+++ b/docs/templates/versions.html
@@ -25,13 +25,10 @@
     </dl>
     <hr/>
     <dl>
-      <dt>External links</dt>
-        <dd>
-          <a href="http://www.micropython.org">micropython.org</a>
-        </dd>
-        <dd>
-          <a href="https://github.com/micropython/micropython">GitHub</a>
-        </dd>
+      <dt>Links</dt>
+      <dd>
+        <a href="https://github.com/RaspberryPiFoundation/python-build-hat">GitHub</a>
+      </dd>
     </dl>
   </div>
 </div>
