--- a/docs/templates/topindex.html
+++ b/docs/templates/topindex.html
@@ -1,14 +1,12 @@
 {% extends "layout.html" %}
 {% block body %}
 
-  <h1>Build HAT Documentation</h1>
+<h1>{{ _('Build HAT Documentation') }}</h1>
 
-  <p>
-    {{ _('Welcome! This is the documentation for the Raspberry Pi Build HAT') }}
-    {{ release|e }}{% if last_updated %}, {{ _('last updated') }} {{ last_updated|e }}{% endif %}.
-  </p>
+<p>{{ _('Welcome! This is the documentation for the Raspberry Pi Build HAT') }}{{ release|e }}{% if last_updated %}, {{ _('last updated') }} {{ last_updated|e }}{% endif %}.</p>
 
-  <table class="contentstable"><tr>
+<table class="contentstable">
+  <tr>
     <td width="40%" style="padding-left:2em;">
       <p class="biglink">
         <a class="biglink" href="{{ pathto("buildhat/index") }}">Library Reference</a><br/>
@@ -21,6 +19,7 @@
         <span class="linkdescr">License information</span>
       </p>
     </td>
-  </tr></table>
+  </tr>
+</table>
 
 {% endblock %}
