Add Getting Started guide links to docs

--- a/docs/templates/topindex.html
+++ b/docs/templates/topindex.html
@@ -15,6 +15,12 @@
     </td>
     <td width="40%" style="padding-left:2em;">
       <p class="biglink">
+        <a class="biglink" href="https://www.raspberrypi.com/documentation/accessories/build-hat.html">Getting Started</a><br/>
+          <span class="linkdescr">Getting Started guide</a></span>
+      </p>
+    </td>
+    <td width="40%" style="padding-left:2em;">
+      <p class="biglink">
         <a class="biglink" href="{{ pathto("license") }}">License</a><br/>
         <span class="linkdescr">License information</span>
       </p>
